<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 RUB-SE-LAB-2024
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/menu_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/textview_settings_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#272727"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toTopOf="@+id/text_header_descr"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_header_descr"
                    android:layout_width="339dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/textview_settings_subtitle"
                    android:textColor="#888888"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_header_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_element"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_settings_llm" />

                <Spinner
                    android:id="@+id/spinner_recommendation"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_settings_apikey" />

                <EditText
                    android:id="@+id/api_key_field"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:text="sk-proj-eBBl52s6gHh7tQQZlv4cT3BlbkFJuiGKugMcQm" />

                <TextView
                    android:id="@+id/endpointTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Huggingface Inference Endpoint"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/endpointField"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="Huggingface Inference Endpoint"
                   android:visibility="gone"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_save_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rot_hell"
                    android:text="@string/button_settings_save"
                    android:textAlignment="center"
                    tools:gravity="bottom" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
</FrameLayout>