<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2024 RUB-SE-LAB-2024
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/test"
    android:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/menu_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_header_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/photo_gallery"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#272727"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_header_descr"
                    android:layout_width="339dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/photo_gallery_description"
                    android:textColor="#888888"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_header_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/main_element"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView_photo"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="9"
                        android:background="#CAC7C7"
                        android:scrollIndicators="right"
                        tools:listitem="@layout/photo_gallery_item" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/button_take_picture"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/rot_hell"
                                    android:contentDescription="@string/test"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/menu_camera_selected" />

                            </androidx.cardview.widget.CardView>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/button_upload_image"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/rot_hell"
                                    android:contentDescription="@string/test"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/gallery_upload_images" />

                            </androidx.cardview.widget.CardView>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="15dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintDimensionRatio="1:1"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/button_create_new_uml"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@color/rot_hell"
                                    android:contentDescription="@string/test"
                                    android:scaleType="centerCrop"
                                    app:srcCompat="@drawable/arrow_square_right_svgrepo_com" />
                            </androidx.cardview.widget.CardView>
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/menu_footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/button_menu_home_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/test"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/menu_home_unselected" />

                <ImageButton
                    android:id="@+id/button_menu_photo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/test"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/menu_camera_selected" />

                <ImageButton
                    android:id="@+id/button_menu_recommendation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/test"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/menu_ai_unselected" />

                <ImageButton
                    android:id="@+id/button_menu_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/test"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/menu_settings_unselected" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>